--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
     <!-- Footer -->
     <footer class="bg-primary text-white text-center pb-5">
-      <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/12ghn__/" class="text-white fw-bold">Alghani Bayu Ardiansyah</a></p>
+      <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/12byu_/" class="text-white fw-bold">Alghani Bayu Ardiansyah</a></p>
     </footer>
     <!-- Akhir Footer -->
 
